test/classes/casts/coerceInitAssign/error/from-borrowed-A-nilable-to-owned-A-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
proc foo() {
  // coercing from borrowed A? to owned A?
  var alloc = new owned A?();
  var a:borrowed A? = alloc;
  var a_:owned A? = a;
}
proc main() {
  foo();
}
